--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<!-- Jquery -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script>
+
+</script>
+
 
 </head>
 
@@ -146,16 +152,15 @@
                                         <div class="invalid-feedback" id="errorCheck"></div>
                                     </div>
                                 </div>
-
-                                <button type="submit" class="btn btn-primary btn-lg w-100  mb-2"
-                                    onclick="registerValidate()">Registrarse</button>
+                                <!-- <button type="submit" class="btn btn-primary btn-lg w-100  mb-2"
+                                    onclick="registerValidate()">Registrarse</button> -->
                             </form>
                         </div>
 
                         <!-- Modal Footer -->
                         <div class="modal-footer">
-                            <!-- <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button> -->
-                            <!-- <button type="submit" class="btn btn-primary btn-lg  mb-2" onclick="registerValidate()">Registrarse</button>  -->
+                            <button type="submit" class="btn btn-primary btn-lg w-100  mb-2"
+                            onclick="registerValidate()" >Registrarse</button>
                         </div>
 
                     </div>
@@ -170,7 +175,7 @@
         <div class="col">
            <h1 class="">Quieres sorprender a tus invitados ?</h1>
         <p class="Co">Descubre nuestras recetas para que las puedas hacer en casa </p>
-        <button class="btn btn-lg bg-warning border-dark m-2">Descubrir</button>  
+        <button class="btn btn-lg btn-outline-warning border-dark m-2">Descubrir</button>  
         </div>
     </div>
 </div>
@@ -190,19 +195,19 @@
             </div>
             <div class="col-md-4 text-center mb-4">
                 <div class="card m-auto " style="width: 18rem;">
-                    <img class="card-img-top border-" src="fotos/taikiki.jpeg" alt="Card image cap">
+                    <img class="card-img-top border-" src="fotos/starmrtii.jpeg" alt="Card image cap">
                     <div class="card-body">
-                      <h5 class="card-title">Nuestros Tikis</h5>
-                      <p class="card-text">Algunos de nuestros ejemplos para que los puedas realizar en casa.</p>
-                      <a href="#" class="btn btn-primary">Descubrir</a>
+                        <h5 class="card-title">Nuestros Martinis</h5>
+                        <p class="card-text">Algunos de nuestros ejemplos para que los puedas realizar en casa.</p>
+                        <a href="#" class="btn btn-primary">Descubrir</a>
                     </div>
-                  </div>
+                </div>
             </div>
             <div class="col-md-4 text-center mb-4">
                 <div class="card m-auto " style="width: 18rem;">
-                    <img class="card-img-top border-" src="fotos/starmrtii.jpeg" alt="Card image cap">
+                    <img class="card-img-top border-" src="fotos/taikiki.jpeg" alt="Card image cap">
                     <div class="card-body">
-                      <h5 class="card-title">Nuestros Martinis</h5>
+                      <h5 class="card-title">Nuestros Tikis</h5>
                       <p class="card-text">Algunos de nuestros ejemplos para que los puedas realizar en casa.</p>
                       <a href="#" class="btn btn-primary">Descubrir</a>
                     </div>
